--- a/css/templete.css
+++ b/css/templete.css
@@ -1761,8 +1761,8 @@ content: "";
 		display:none;
 	}
 	.split-box-area.row.spno, .spno {
-		margin-left: 20px;
-		margin-right: 20px;
+		margin-left: 0;
+		margin-right: 0;
 	}
 	.discover-btn i{
 		top: -30px;
